--- a/lec/lec09/lec09.ipynb
+++ b/lec/lec09/lec09.ipynb
@@ -503,7 +503,7 @@
     }
    },
    "source": [
-    "Bin the release year data based on bins with unequal widths. We are using the `bin` table method to do this, but you will typically work with the `bin` table method in our assignments/exams."
+    "Bin the release year data based on bins with unequal widths. We are using the `bin` table method to do this, but you won't typically work with the `bin` table method in our assignments/exams."
    ]
   },
   {
